--- a/helm-app/templates/service.yaml
+++ b/helm-app/templates/service.yaml
@@ -1,15 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "my-python-app.fullname" . }}
+  name: {{ include "helm-app.fullname" . }}
   labels:
-    {{- include "my-python-app.labels" . | nindent 4 }}
+    {{- include "helm-app.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
+      nodePort: 32000
       targetPort: http
       protocol: TCP
       name: http
   selector:
-    {{- include "my-python-app.selectorLabels" . | nindent 4 }}
+    {{- include "helm-app.selectorLabels" . | nindent 4 }}
