--- a/helm-app/templates/serviceaccount.yaml
+++ b/helm-app/templates/serviceaccount.yaml
@@ -2,11 +2,12 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "my-python-app.serviceAccountName" . }}
+  name: {{ include "helm-app.serviceAccountName" . }}
   labels:
-    {{- include "my-python-app.labels" . | nindent 4 }}
+    {{- include "helm-app.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
 {{- end }}
